<resources>
    <string name="app_name">Smart Bluetooth Marketplace</string>
    <string name="sign_up">Sign Up</string>
    <string name="profileImage">Profile Image</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailID">Email Id</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="username">Username</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="makePayment">Make A Payment</string>

    <string name="menu_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="newToApp">New to Application?</string>
    <string name="Register">Register Now</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="logo">logo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="items">Items</string>
    <string name="cart">Cart</string>
    <string name="ok">OK</string>
    <string name="addCard">Add New Card</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">PRICE</string>
</resources>
