<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/edit_profile"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_firstNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edit_lastNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edit_firstNameEditText"
        app:layout_constraintStart_toStartOf="@+id/edit_firstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/edit_firstNameEditText" />

    <EditText
        android:id="@+id/edit_cityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/city"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edit_lastNameEditText"
        app:layout_constraintStart_toStartOf="@+id/edit_lastNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/edit_lastNameEditText" />

    <TextView
        android:id="@+id/edit_genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gender"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_cityEditText"
        app:layout_constraintTop_toBottomOf="@+id/edit_cityEditText" />

    <RadioGroup
        android:id="@+id/edit_genderRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/edit_cityEditText"
        app:layout_constraintStart_toStartOf="@+id/edit_genderTextView"
        app:layout_constraintTop_toBottomOf="@+id/edit_genderTextView"
        android:checkedButton="@+id/edit_maleRadioButton">

        <RadioButton
            android:id="@+id/edit_maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/edit_femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:padding="16dp"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/edit_updateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/update"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/edit_genderRadioGroup"
        app:layout_constraintStart_toStartOf="@+id/edit_genderRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/edit_genderRadioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>