<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".SignUpActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/signUp_signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sign_up"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signUp_firstNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:ems="10"
            android:hint="@string/firstName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp_signUpText" />

        <EditText
            android:id="@+id/signUp_lastNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/lastName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/signUp_firstNameEditText"
            app:layout_constraintStart_toStartOf="@+id/signUp_firstNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_firstNameEditText" />

        <EditText
            android:id="@+id/signUp_emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/emailID"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/signUp_lastNameEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signUp_lastNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_lastNameEditText" />

        <EditText
            android:id="@+id/signUp_passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/signUp_emailEditText"
            app:layout_constraintStart_toStartOf="@+id/signUp_emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_usernameEditText" />

        <EditText
            android:id="@+id/signUp_confirmPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/signUp_passwordEditText"
            app:layout_constraintStart_toStartOf="@+id/signUp_passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_passwordEditText" />

        <EditText
            android:id="@+id/signUp_cityEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/city"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/signUp_confirmPasswordEditText"
            app:layout_constraintStart_toStartOf="@+id/signUp_confirmPasswordEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_confirmPasswordEditText" />

        <TextView
            android:id="@+id/signUp_genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/signUp_cityEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_cityEditText" />

        <RadioGroup
            android:id="@+id/signUp_genderRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/signUp_cityEditText"
            app:layout_constraintStart_toStartOf="@+id/signUp_genderTextView"
            app:layout_constraintTop_toBottomOf="@+id/signUp_genderTextView"
            android:checkedButton="@+id/signUp_maleRadioButton">

            <RadioButton
                android:id="@+id/signUp_maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/signUp_femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:padding="16dp"
                android:text="@string/female" />
        </RadioGroup>

        <Button
            android:id="@+id/signUp_signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_up"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/signUp_genderRadioGroup"
            app:layout_constraintStart_toStartOf="@+id/signUp_genderRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/signUp_genderRadioGroup" />

        <EditText
            android:id="@+id/signUp_usernameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/signUp_emailEditText"
            app:layout_constraintStart_toStartOf="@+id/signUp_emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/signUp_emailEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>