<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/main_loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/main_passwordEditText"
            app:layout_constraintStart_toStartOf="@+id/main_passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/main_passwordEditText" />

        <EditText
            android:id="@+id/main_passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/main_usernameEditText"
            app:layout_constraintStart_toStartOf="@+id/main_usernameEditText"
            app:layout_constraintTop_toBottomOf="@+id/main_usernameEditText" />

        <EditText
            android:id="@+id/main_usernameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="56dp"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingRight="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_LogoImageView" />

        <ImageView
            android:id="@+id/main_LogoImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/main_forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgotPassword"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/main_passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/main_passwordEditText" />

        <TextView
            android:id="@+id/main_RegTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="8dp"
            android:text="@string/newToApp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_loginButton" />

        <TextView
            android:id="@+id/main_signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="56dp"
            android:text="@string/Register"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.152"
            app:layout_constraintStart_toEndOf="@+id/main_RegTextView"
            app:layout_constraintTop_toBottomOf="@+id/main_loginButton" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="11dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/main_usernameEditText"
            app:layout_constraintEnd_toEndOf="@+id/main_usernameEditText"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/main_usernameEditText"
            app:layout_constraintTop_toTopOf="@+id/main_usernameEditText"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>